# shader-api

./: .env  .gitignore  build.sh  mix.exs
_build/dev/lib/bandit/.mix/: compile.elixir
_build/dev/lib/bandit/ebin/: Elixir.Bandit.Adapter.beam  Elixir.Bandit.Application.beam  Elixir.Bandit.Clock.beam  Elixir.Bandit.Compression.beam  Elixir.Bandit.DelegatingHandler.beam  Elixir.Bandit.Extractor.beam  Elixir.Bandit.HTTP1.Handler.beam  Elixir.Bandit.HTTP1.Socket.beam  Elixir.Bandit.HTTP2.Connection.beam  Elixir.Bandit.HTTP2.Errors.ConnectionError.beam  Elixir.Bandit.HTTP2.Errors.StreamError.beam  Elixir.Bandit.HTTP2.Errors.beam  Elixir.Bandit.HTTP2.FlowControl.beam  Elixir.Bandit.HTTP2.Frame.Continuation.beam  Elixir.Bandit.HTTP2.Frame.Data.beam  Elixir.Bandit.HTTP2.Frame.Flags.beam  Elixir.Bandit.HTTP2.Frame.Goaway.beam  Elixir.Bandit.HTTP2.Frame.Headers.beam  Elixir.Bandit.HTTP2.Frame.Ping.beam  Elixir.Bandit.HTTP2.Frame.Priority.beam  Elixir.Bandit.HTTP2.Frame.PushPromise.beam  Elixir.Bandit.HTTP2.Frame.RstStream.beam  Elixir.Bandit.HTTP2.Frame.Serializable.Bandit.HTTP2.Frame.Continuation.beam  Elixir.Bandit.HTTP2.Frame.Serializable.Bandit.HTTP2.Frame.Data.beam  Elixir.Bandit.HTTP2.Frame.Serializable.Bandit.HTTP2.Frame.Goaway.beam  (+52 more)
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: shader_api_web.ex
lib/shader_api/: application.ex  groq.ex  release.ex  repo.ex
lib/shader_api_web/: endpoint.ex  gettext.ex  router.ex
lib/shader_api_web/controllers/: shader_controller.ex
native/groq_api_rust/: Cargo.toml
native/groq_api_rust/src/: lib.rs
(+1023 files in other folders)
